--- a/css/cadastro_style.css
+++ b/css/cadastro_style.css
@@ -43,7 +43,7 @@ input {
 
 input[type="submit"] {
     width: auto;
-    background-color: #ff9f6f;
+    background-color: #fe793f;
     color: #fff;
     cursor: pointer;
     margin-top: 20px;
