--- a/css/dashboard_style.css
+++ b/css/dashboard_style.css
@@ -72,7 +72,7 @@ li {
 }
 
 .modal-content {
-    background-color: #fefefe;
+    background-color: #8d0000;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid var(--input-border-color);
