--- a/css/dashboard_style.css
+++ b/css/dashboard_style.css
@@ -44,7 +44,7 @@ li {
     margin-bottom: 10px;
 }
 
-.adicionarPratoBtn {
+.btn-criar-cardapio {
     display: inline-block;
     margin: 15px 0;
     padding: 10px 15px;
@@ -55,11 +55,11 @@ li {
     border-radius: 5px;
 }
 
-.adicionarPratoBtn:hover {
+.btn-criar-cardapio:hover {
     background-color: var(--submit-hover-color);
 }
 
-.modal {
+/* .modal {
     display: none;
     position: fixed;
     z-index: 1;
@@ -72,11 +72,75 @@ li {
 }
 
 .modal-content {
-    background-color: #8d0000;
+    background-color: #fefefe;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid var(--input-border-color);
     width: 80%;
+} */
+
+.modal label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.modal input,
+.modal textarea,
+.modal select {
+    display: block;
+    width: 100%;
+    padding: 8px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: var(--text-color);
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid var(--input-border-color);
+    border-radius: 4px;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+.modal textarea {
+    resize: vertical;
+}
+
+.modal select {
+    font-size: 14px;
+    border-radius: 4px;
+    padding: 6px 12px;
+}
+
+.modal button[type="submit"] {
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
+    color: #fff;
+    font-weight: bold;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, border-color 0.3s;
+}
+
+.modal button[type="submit"]:hover {
+    background-color: var(--submit-hover-color);
+    border-color: var(--submit-hover-color);
+}
+
+.modal button[type="button"] {
+    background-color: #ccc;
+    border-color: #ccc;
+    color: #333;
+    font-weight: bold;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, border-color 0.3s;
+}
+
+.modal button[type="button"]:hover {
+    background-color: #bbb;
+    border-color: #bbb;
 }
 
 .close {
