--- a/css/dashboard_style.css
+++ b/css/dashboard_style.css
@@ -59,7 +59,7 @@ li {
     background-color: var(--submit-hover-color);
 }
 
-/* .modal {
+.modal {
     display: none;
     position: fixed;
     z-index: 1;
@@ -77,7 +77,7 @@ li {
     padding: 20px;
     border: 1px solid var(--input-border-color);
     width: 80%;
-} */
+}
 
 .modal label {
     display: block;
