--- a/css/dashboard_style.css
+++ b/css/dashboard_style.css
@@ -59,6 +59,12 @@ li {
     background-color: var(--submit-hover-color);
 }
 
+@import 'colors.css';
+
+/* Estilos existentes */
+
+/* Estilos adicionados e refinados */
+
 .modal {
     display: none;
     position: fixed;
@@ -72,15 +78,41 @@ li {
 }
 
 .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
+    background-color: #fff;
+    margin: 5% auto;
+    padding: 30px;
     border: 1px solid var(--input-border-color);
-    width: 80%;
+    width: 60%;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.modal-title {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.close {
+    color: #aaa;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover {
+    color: #000;
 }
 
 .modal label {
     display: block;
+    font-size: 14px;
     margin-bottom: 5px;
 }
 
@@ -141,6 +173,12 @@ li {
 .modal button[type="button"]:hover {
     background-color: #bbb;
     border-color: #bbb;
+}
+
+.modal-footer {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 20px;
 }
 
 .close {
