--- a/css/dashboard_style.css
+++ b/css/dashboard_style.css
@@ -79,8 +79,8 @@ li {
 
 .modal-content {
     background-color: #fff;
-    /* margin: 5% auto; */
-    padding: 30px;
+    margin: 5% auto;
+    /* padding: 30px; */
     border: 1px solid var(--input-border-color);
     width: 60%;
     border-radius: 10px;
