--- a/css/dashboard_style.css
+++ b/css/dashboard_style.css
@@ -115,7 +115,7 @@ input,
 textarea,
 select {
     width: 100%;
-    padding: 10px;
+    /* padding: 10px; */
     margin-bottom: 20px;
     border: 1px solid var(--input-border-color);
     border-radius: 5px;
