--- a/css/dashboard_style.css
+++ b/css/dashboard_style.css
@@ -111,7 +111,7 @@ li {
     align-items: center;
 } */
 
-input,
+/* input,
 textarea,
 select {
     width: 100%;
@@ -121,7 +121,7 @@ select {
     border-radius: 5px;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-}
+} */
 
 input:focus,
 textarea:focus,
