--- a/css/dashboard_style.css
+++ b/css/dashboard_style.css
@@ -111,17 +111,17 @@ li {
     align-items: center;
 } */
 
-/* input,
+input,
 textarea,
 select {
     width: 100%;
-    padding: 5px;
-    margin-bottom: 20px;
+    padding: 10px;
+    margin-bottom: 30px;
     border: 1px solid var(--input-border-color);
     border-radius: 5px;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-} */
+}
 
 input:focus,
 textarea:focus,
