--- a/css/dashboard_style.css
+++ b/css/dashboard_style.css
@@ -92,7 +92,7 @@ li {
     margin: 0;
 }
 
-.close {
+/* .close {
     color: #aaaaaa;
     font-size: 28px;
     font-weight: bold;
@@ -103,20 +103,20 @@ li {
     color: #000;
     text-decoration: none;
     cursor: pointer;
-}
-
-/* form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 } */
+
+form {
+    /* display: flex;
+    flex-direction: column; */
+    align-items: center;
+}
 
 input,
 textarea,
 select {
     width: 100%;
     padding: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     border: 1px solid var(--input-border-color);
     border-radius: 5px;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
