--- a/css/dashboard_style.css
+++ b/css/dashboard_style.css
@@ -105,11 +105,11 @@ li {
     cursor: pointer;
 } */
 
-form {
-    /* display: flex;
-    flex-direction: column; */
+/* form {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-}
+} */
 
 input,
 textarea,
