--- a/css/dashboard_style.css
+++ b/css/dashboard_style.css
@@ -1,59 +1,68 @@
+@import 'colors.css';
+
 body {
     font-family: Arial, sans-serif;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    margin: 0;
+    padding: 0;
 }
 
 h1 {
+    background-color: var(--primary-color);
+    color: #fff;
+    padding: 15px;
+    margin-bottom: 30px;
+    border-radius: 10px;
     text-align: center;
-    margin-bottom: 20px;
+}
+
+h2 {
+    margin-bottom: 15px;
 }
 
 section {
-    margin-bottom: 40px;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    margin-bottom: 20px;
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-table th, table td {
-    border: 1px solid #ccc;
-    padding: 8px;
-    text-align: left;
-}
-
-table th {
-    background-color: #f2f2f2;
+strong {
     font-weight: bold;
 }
 
-table td {
-    white-space: nowrap;
+ul {
+    list-style-type: none;
+    padding: 0;
 }
 
-table td button {
-    margin-right: 5px;
+li {
+    margin-bottom: 10px;
 }
 
-.adicionarPratoBtn {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
+.btn-criar-cardapio {
     display: inline-block;
-    font-size: 16px;
-    margin: 10px 2px;
-    cursor: pointer;
+    margin: 15px 0;
+    padding: 10px 15px;
+    background-color: var(--primary-color);
+    color: #ffffff;
+    font-weight: bold;
+    text-decoration: none;
     border-radius: 5px;
+}
+
+.btn-criar-cardapio:hover {
+    background-color: var(--submit-hover-color);
 }
 
 .modal {
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 100px;
     left: 0;
     top: 0;
     width: 100%;
@@ -64,31 +73,143 @@ table td button {
 
 .modal-content {
     background-color: #fefefe;
-    margin: auto;
+    margin: 15% auto;
     padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 500px;
+    border: 1px solid var(--input-border-color);
+    width: 60%;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.close {
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.modal-title {
+    font-size: 24px;
+    margin: 0;
+}
+
+/* .close {
     color: #aaaaaa;
-    float: right;
     font-size: 28px;
     font-weight: bold;
 }
 
-.close:hover, .close:focus {
+.close:hover,
+.close:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
+} */
+
+/* form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} */
+
+input,
+textarea,
+select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid var(--input-border-color);
+    border-radius: 5px;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
 }
 
-form div {
+input:focus,
+textarea:focus,
+select:focus {
+    border-color: var(--primary-color);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(254, 121, 63, 0.6);
+}
+
+button[type="submit"],
+button[type="button"],
+button[type="adicionarPratoBtn"] {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: var(--primary-color);
+    color: #ffffff;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button[type="submit"]:hover,
+button[type="button"]:hover {
+    background-color: var(--submit-hover-color);
+}
+
+.dish-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+
+.dish-item {
+    flex-basis: 48%;
+    background-color: var(--secondary-background-color);
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 15px;
+    position: relative;
+}
+
+.dish-title {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.dish-description {
+    font-size: 14px;
     margin-bottom: 10px;
 }
 
-form label {
-    display: block;
-    margin-bottom: 5px;
+.dish-price {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.btn-edit-dish,
+.btn-delete-dish {
+    position: absolute;
+    top: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition: color 0.3s;
+}
+
+.btn-edit-dish {
+    right: 35px;
+    color: var(--edit-color);
+}
+
+.btn-edit-dish:hover {
+    color: var(--edit-hover-color);
+}
+
+.btn-delete-dish {
+    right: 5px;
+    color: var(--delete-color);
+}
+
+.btn-delete-dish:hover {
+    color: var(--delete-hover-color);
 }
