--- a/css/dashboard_style.css
+++ b/css/dashboard_style.css
@@ -10,7 +10,7 @@ body {
 
 h1 {
     background-color: var(--primary-color);
-    color: #fff;
+    color: #ff0000;
     padding: 15px;
     margin-bottom: 30px;
     border-radius: 10px;
