--- a/css/cardapio_style.css
+++ b/css/cardapio_style.css
@@ -2,24 +2,34 @@
 
 body {
     font-family: Arial, sans-serif;
+    background-color: var(--background-color);
+    color: var(--text-color);
     margin: 0;
     padding: 0;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+h1 {
+    background-color: var(--primary-color);
+    color: #fff;
+    padding: 15px;
+    margin-bottom: 30px;
+    border-radius: 10px;
+    text-align: center;
 }
 
-h1 {
-    text-align: center;
-    margin: 30px 0;
+.container {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 
 .row {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .card {
@@ -28,6 +38,7 @@ h1 {
     margin: 10px;
     flex-basis: 100%;
     background-color: #fff;
+    border-radius: 10px;
 }
 
 @media (min-width: 576px) {
