--- a/css/cardapio_style.css
+++ b/css/cardapio_style.css
@@ -53,16 +53,35 @@ h1 {
     }
 }
 
-.card img {
-    max-width: 100%;
-    height: auto;
+
+.card-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
 }
 
-.card-title {
-    font-size: 24px;
-    margin-bottom: 10px;
+.card {
+    display: flex;
+    align-items: center;
+    max-width: 800px;
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    text-align: left;
+}
+
+.card-img {
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    object-fit: cover;
+    margin-right: 20px;
 }
 
 .card-text {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
