--- a/css/cardapio_style.css
+++ b/css/cardapio_style.css
@@ -57,31 +57,30 @@ h1 {
 .card-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-bottom: 30px;
+    gap: 20px;
+    margin: 0 auto;
+    max-width: 600px;
 }
 
 .card {
     display: flex;
-    align-items: center;
-    max-width: 800px;
-    width: 100%;
-    margin-bottom: 20px;
-    padding: 20px;
+    flex-direction: column;
+    gap: 10px;
     background-color: #fff;
+    padding: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    text-align: left;
 }
 
 .card-img {
-    width: 100px;
-    height: 100px;
-    border-radius: 10px;
+    width: 100%;
+    height: auto;
     object-fit: cover;
-    margin-right: 20px;
+    border-radius: 5px;
 }
 
-.card-text {
-    margin-bottom: 5px;
+.card-content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
